fix Material font family to avoid flickering and update Viz elements' styles (#31649)

--- a/packages/devextreme-scss/scss/widgets/material/typography/_index.scss
+++ b/packages/devextreme-scss/scss/widgets/material/typography/_index.scss
@@ -11,7 +11,7 @@
 @import "https://fonts.googleapis.com/earlyaccess/notokufiarabic.css";
 
 @font-face {
-  font-family: 'RobotoFallback';
+  font-family: 'roboto fallback';
   font-style: normal;
   font-weight: 300;
   src:
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-  font-family: 'RobotoFallback';
+  font-family: 'roboto fallback';
   font-style: normal;
   font-weight: 400;
   src:
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-  font-family: 'RobotoFallback';
+  font-family: 'roboto fallback';
   font-style: normal;
   font-weight: 500;
   src:
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-  font-family: 'RobotoFallback';
+  font-family: 'roboto fallback';
   font-style: normal;
   font-weight: 700;
   src:
